--- a/CSC/KPro_CDC/KPro_CDC.ioc
+++ b/CSC/KPro_CDC/KPro_CDC.ioc
@@ -1,4 +1,15 @@
 #MicroXplorer Configuration settings - do not modify
+Dma.Request0=USART1_TX
+Dma.RequestsNb=1
+Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.0.Instance=DMA1_Channel4
+Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.0.Mode=DMA_NORMAL
+Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 FATFS.IPParameters=_USE_LFN,_MAX_SS
 FATFS._MAX_SS=4096
 FATFS._USE_LFN=1
@@ -6,15 +17,16 @@ File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32F3
-Mcu.IP0=FATFS
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SPI2
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IP6=USB
-Mcu.IP7=USB_DEVICE
-Mcu.IPNb=8
+Mcu.IP0=DMA
+Mcu.IP1=FATFS
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=USART1
+Mcu.IP7=USB
+Mcu.IP8=USB_DEVICE
+Mcu.IPNb=9
 Mcu.Name=STM32F303V(B-C)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -53,6 +65,7 @@ Mcu.UserName=STM32F303VBTx
 MxCube.Version=6.0.0
 MxDb.Version=DB.6.0.0
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -175,50 +188,51 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI2_Init-SPI2-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,6-MX_FATFS_Init-FATFS-false-HAL-false
-RCC.ADC12outputFreq_Value=48000000
-RCC.ADC34outputFreq_Value=48000000
-RCC.AHBFreq_Value=48000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_FATFS_Init-FATFS-false-HAL-false
+RCC.ADC12outputFreq_Value=72000000
+RCC.ADC34outputFreq_Value=72000000
+RCC.AHBFreq_Value=72000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=24000000
-RCC.APB1TimFreq_Value=48000000
-RCC.APB2CLKDivider=RCC_HCLK_DIV4
-RCC.APB2Freq_Value=12000000
-RCC.APB2TimFreq_Value=24000000
-RCC.CortexFreq_Value=48000000
-RCC.FCLKCortexFreq_Value=48000000
+RCC.APB1Freq_Value=36000000
+RCC.APB1TimFreq_Value=72000000
+RCC.APB2Freq_Value=72000000
+RCC.APB2TimFreq_Value=72000000
+RCC.CortexFreq_Value=72000000
+RCC.FCLKCortexFreq_Value=72000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=48000000
-RCC.HSEPLLFreq_Value=16000000
+RCC.HCLKFreq_Value=72000000
+RCC.HSEPLLFreq_Value=8000000
 RCC.HSE_VALUE=16000000
 RCC.HSIPLLFreq_Value=4000000
 RCC.HSI_VALUE=8000000
 RCC.I2C1Freq_Value=8000000
 RCC.I2C2Freq_Value=8000000
-RCC.I2SClocksFreq_Value=48000000
-RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
+RCC.I2SClocksFreq_Value=72000000
+RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PRESCALERUSB,RCC_PLLsource_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=40000
-RCC.MCOFreq_Value=48000000
-RCC.PLLCLKFreq_Value=48000000
-RCC.PLLMCOFreq_Value=24000000
-RCC.PLLMUL=RCC_PLL_MUL3
+RCC.MCOFreq_Value=72000000
+RCC.PLLCLKFreq_Value=72000000
+RCC.PLLMCOFreq_Value=36000000
+RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
+RCC.RCC_PLLsource_Clock_Source_FROM_HSE=RCC_HSE_PREDIV_DIV2
 RCC.RTCFreq_Value=40000
 RCC.RTCHSEDivFreq_Value=500000
-RCC.SYSCLKFreq_VALUE=48000000
+RCC.SYSCLKFreq_VALUE=72000000
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TIM1Freq_Value=24000000
-RCC.TIM2Freq_Value=24000000
-RCC.TIM8Freq_Value=24000000
-RCC.UART4Freq_Value=24000000
-RCC.UART5Freq_Value=24000000
-RCC.USART1Freq_Value=12000000
-RCC.USART2Freq_Value=24000000
-RCC.USART3Freq_Value=24000000
+RCC.TIM1Freq_Value=72000000
+RCC.TIM2Freq_Value=72000000
+RCC.TIM8Freq_Value=72000000
+RCC.UART4Freq_Value=36000000
+RCC.UART5Freq_Value=36000000
+RCC.USART1Freq_Value=72000000
+RCC.USART2Freq_Value=36000000
+RCC.USART3Freq_Value=36000000
 RCC.USBFreq_Value=48000000
-RCC.VCOOutput2Freq_Value=16000000
+RCC.VCOOutput2Freq_Value=8000000
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI2.CalculateBaudRate=1.5 MBits/s
+SPI2.CalculateBaudRate=2.25 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler,DataSize
