--- a/CSC/KPro_CDC/KPro_CDC.ioc
+++ b/CSC/KPro_CDC/KPro_CDC.ioc
@@ -6,25 +6,32 @@ USB_DEVICE.CLASS_NAME_FS=CDC
 RCC.USART1Freq_Value=72000000
 SPI2.VirtualNSS=VM_NSSHARD
 RCC.CortexFreq_Value=72000000
+VP_TIM17_VS_ClockSourceINT.Mode=Enable_Timer
 FATFS._USE_LFN=1
 NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 ProjectManager.KeepUserCode=true
 Mcu.UserName=STM32F303VBTx
 PD9.GPIOParameters=GPIO_Label
 SPI2.VirtualType=VM_MASTER
+PC12.Locked=true
 USART1.BaudRate=9600
+PC10.Locked=true
 RCC.PLLCLKFreq_Value=72000000
+PC10.Signal=GPIO_Output
+PC12.Signal=GPIO_Output
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 PA0.GPIO_Label=SEG_E
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_FATFS_Init-FATFS-false-HAL-false
 PC0.GPIOParameters=GPIO_Label
 PD8.Locked=true
 PC0.GPIO_Label=LED_5V
+PD0.GPIO_Label=SEG_2
 PA11.Mode=Device
 RCC.RTCFreq_Value=40000
 PA3.GPIOParameters=GPIO_Label
 RCC.HSEPLLFreq_Value=8000000
 RCC.USART2Freq_Value=36000000
+PD0.Locked=true
 PC5.Mode=Asynchronous
 USART1.IPParameters=VirtualMode-Asynchronous,BaudRate
 PC1.Locked=true
@@ -42,27 +49,29 @@ Mcu.IP5=SYS
 Mcu.IP2=NVIC
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Mcu.IP3=RCC
+PA15.GPIO_Label=SEG_1__
 Mcu.IP0=DMA
 Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
 Mcu.IP1=FATFS
 PA12.Signal=USB_DP
-PE4.GPIOParameters=GPIO_Label
 Mcu.UserConstants=
 Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
 PC1.GPIOParameters=GPIO_Label
 Mcu.ThirdPartyNb=0
 RCC.HCLKFreq_Value=72000000
-Mcu.IPNb=9
+Mcu.IPNb=10
 RCC.I2SClocksFreq_Value=72000000
 ProjectManager.PreviousToolchain=STM32CubeIDE
 RCC.APB2TimFreq_Value=72000000
 PD8.GPIOParameters=GPIO_Label
-Mcu.Pin6=PF0-OSC_IN
-Mcu.Pin7=PC0
+Mcu.Pin6=PC0
+PD0.Signal=GPIO_Output
+Mcu.Pin7=PC1
 PD8.Signal=GPIO_Output
+Mcu.Pin8=PA0
 PE5.Signal=GPIO_Output
-Mcu.Pin8=PC1
-Mcu.Pin9=PA0
+Mcu.Pin9=PA1
+PE1.Signal=GPIO_Output
 Dma.USART1_RX.1.MemInc=DMA_MINC_ENABLE
 PF10.GPIO_Label=V_SEL
 RCC.AHBFreq_Value=72000000
@@ -72,11 +81,11 @@ RCC.TIM2Freq_Value=72000000
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
 GPIO.groupedBy=Group By Peripherals
-Mcu.Pin2=PE4
-Mcu.Pin3=PE5
+Mcu.Pin2=PE5
+Mcu.Pin3=PE6
 RCC.USART3Freq_Value=36000000
-Mcu.Pin4=PE6
-Mcu.Pin5=PF10
+Mcu.Pin4=PF10
+Mcu.Pin5=PF0-OSC_IN
 ProjectManager.ProjectBuild=false
 RCC.HSE_VALUE=16000000
 Dma.USART1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
@@ -88,20 +97,23 @@ RCC.RCC_PLLsource_Clock_Source_FROM_HSE=RCC_HSE_PREDIV_DIV2
 RCC.PLLMUL=RCC_PLL_MUL9
 ProjectManager.FirmwarePackage=STM32Cube FW_F3 V1.11.2
 MxDb.Version=DB.6.0.10
+NVIC.TIM1_TRG_COM_TIM17_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+PE0.GPIOParameters=GPIO_Label
 PA1.GPIOParameters=GPIO_Label
 ProjectManager.BackupPrevious=false
 PA14.Mode=Serial_Wire
 PB14.Mode=Full_Duplex_Master
+PC11.GPIO_Label=SEG_1
 File.Version=6
-PE4.GPIO_Label=SEG_4
 PF10.Locked=true
 SPI2.CalculateBaudRate=2.25 MBits/s
 PE3.GPIOParameters=GPIO_Label
 PE2.Signal=GPIO_Output
 PE3.Locked=true
+PB8.Locked=true
+PE1.Locked=true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-PE4.Signal=GPIO_Output
 PE6.GPIOParameters=GPIO_Label
 Dma.RequestsNb=2
 ProjectManager.HalAssertFull=false
@@ -111,6 +123,7 @@ RCC.TIM1Freq_Value=72000000
 Dma.USART1_RX.1.Mode=DMA_NORMAL
 RCC.PLLMCOFreq_Value=36000000
 Mcu.Package=LQFP100
+PB9.Signal=GPIO_Output
 PB12.Mode=NSS_Signal_Hard_Output
 SPI2.Mode=SPI_MODE_MASTER
 VP_FATFS_VS_Generic.Signal=FATFS_VS_Generic
@@ -119,8 +132,10 @@ ProjectManager.ToolChainLocation=
 PA2.GPIO_Label=SEG_F
 RCC.LSI_VALUE=40000
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+PA15.Signal=GPIO_Output
 Dma.USART1_TX.0.Instance=DMA1_Channel4
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
+PE0.GPIO_Label=SEG_4_
 Dma.USART1_RX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.Request1=USART1_RX
 RCC.APB1TimFreq_Value=72000000
@@ -142,12 +157,18 @@ Dma.USART1_RX.1.Instance=DMA1_Channel5
 ProjectManager.ProjectFileName=KPro_CDC.ioc
 RCC.ADC12outputFreq_Value=72000000
 Dma.USART1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+PB8.GPIOParameters=GPIO_Label
 Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
 PD9.GPIO_Label=USB_RX_DIODE
+PB9.GPIO_Label=SEG_3
 Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
-Mcu.PinsNb=29
+PA15.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=SEG_1_
+Mcu.PinsNb=38
 ProjectManager.NoMain=false
+PC11.Locked=true
 USB_DEVICE.VirtualModeFS=Cdc_FS
+PC11.Signal=GPIO_Output
 NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 PC4.Signal=USART1_TX
 PB11.GPIO_Label=DET
@@ -157,21 +178,28 @@ ProjectManager.DeletePrevious=true
 RCC.HSIPLLFreq_Value=4000000
 PC0.Signal=GPIO_Output
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
+PC11.GPIOParameters=GPIO_Label
 USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS
+VP_TIM17_VS_ClockSourceINT.Signal=TIM17_VS_ClockSourceINT
 RCC.FamilyName=M
 PD8.GPIO_Label=USB_TX_DIODE
+PB9.GPIOParameters=GPIO_Label
+PC12.GPIOParameters=GPIO_Label
 FATFS.IPParameters=_USE_LFN,_MAX_SS
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 PA13.Signal=SYS_JTMS-SWDIO
+PB8.GPIO_Label=SEG_3_
+PA15.Locked=true
 ProjectManager.TargetToolchain=STM32CubeIDE
 Dma.USART1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
-PE4.Locked=true
 PB11.GPIOParameters=GPIO_Label
+PB9.Locked=true
 Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,BaudRatePrescaler,DataSize
 PE2.GPIOParameters=GPIO_Label
 ProjectManager.RegisterCallBack=
+PE0.Locked=true
 RCC.USBFreq_Value=48000000
 RCC.LSE_VALUE=32768
 PA1.Signal=GPIO_Output
@@ -180,6 +208,7 @@ VP_FATFS_VS_Generic.Mode=User_defined
 PB14.Signal=SPI2_MISO
 Dma.USART1_TX.0.Mode=DMA_NORMAL
 board=custom
+PE1.GPIO_Label=SEG_4
 ProjectManager.LastFirmware=true
 PB15.Mode=Full_Duplex_Master
 RCC.VCOOutput2Freq_Value=8000000
@@ -187,69 +216,84 @@ RCC.APB2Freq_Value=72000000
 RCC.TIM8Freq_Value=72000000
 RCC.UART4Freq_Value=36000000
 MxCube.Version=6.1.1
+Mcu.Pin37=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
+Mcu.Pin35=VP_SYS_VS_Systick
 RCC.I2C1Freq_Value=8000000
+Mcu.Pin36=VP_TIM17_VS_ClockSourceINT
 PF10.Signal=GPIO_Output
+Mcu.Pin30=PB8
 PC1.GPIO_Label=VOUT_EN
 PA1.GPIO_Label=SEG_G
 VP_SYS_VS_Systick.Mode=SysTick
+Mcu.Pin33=PE1
+Mcu.Pin34=VP_FATFS_VS_Generic
+Mcu.Pin31=PB9
+Mcu.Pin32=PE0
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PE5.Locked=true
+PC10.GPIOParameters=GPIO_Label
 PE6.Signal=GPIO_Output
 RCC.UART5Freq_Value=36000000
 PA13.Mode=Serial_Wire
 ProjectManager.FreePins=false
 RCC.IPParameters=ADC12outputFreq_Value,ADC34outputFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSEPLLFreq_Value,HSE_VALUE,HSIPLLFreq_Value,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PRESCALERUSB,RCC_PLLsource_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSourceVirtual,TIM1Freq_Value,TIM2Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 ProjectManager.AskForMigrate=true
+PE0.Signal=GPIO_Output
 Mcu.Name=STM32F303V(B-C)Tx
-Mcu.Pin26=VP_FATFS_VS_Generic
-Mcu.Pin27=VP_SYS_VS_Systick
+Mcu.Pin26=PC10
+Mcu.Pin27=PC11
 RCC.RTCHSEDivFreq_Value=500000
 PA2.Signal=GPIO_Output
-Mcu.Pin24=PA13
+Mcu.Pin24=PA14
 ProjectManager.UnderRoot=true
-Mcu.Pin25=PA14
+Mcu.Pin25=PA15
 FATFS._MAX_SS=4096
-Mcu.IP8=USB_DEVICE
-Mcu.Pin28=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
-Mcu.IP6=USART1
-Mcu.IP7=USB
+Mcu.IP8=USB
+Mcu.IP9=USB_DEVICE
+Mcu.Pin28=PC12
+Mcu.IP6=TIM17
+Mcu.Pin29=PD0
+Mcu.IP7=USART1
 ProjectManager.CoupleFile=false
 RCC.SYSCLKFreq_VALUE=72000000
-Mcu.Pin22=PA11
-Mcu.Pin23=PA12
+Mcu.Pin22=PA12
+Mcu.Pin23=PA13
 PA1.Locked=true
-Mcu.Pin20=PD8
+Mcu.Pin20=PD9
 PA3.Locked=true
-Mcu.Pin21=PD9
+Mcu.Pin21=PA11
 PA12.Mode=Device
 NVIC.ForceEnableDMAVector=true
 KeepUserPlacement=false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PE5.GPIO_Label=SEG_A
+PC12.GPIO_Label=SEG_2_
 ProjectManager.CompilerOptimize=6
 PA11.Signal=USB_DM
 Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
 PA14.Signal=SYS_JTCK-SWCLK
 ProjectManager.HeapSize=0x200
-Mcu.Pin15=PB11
+Mcu.Pin15=PB12
 PA0.GPIOParameters=GPIO_Label
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-Mcu.Pin16=PB12
-Mcu.Pin13=PC4
-Mcu.Pin14=PC5
+Mcu.Pin16=PB13
+Mcu.Pin13=PC5
+Mcu.Pin14=PB11
 PF10.GPIOParameters=GPIO_Label
-Mcu.Pin19=PB15
+Mcu.Pin19=PD8
 ProjectManager.ComputerToolchain=false
-Mcu.Pin17=PB13
+Mcu.Pin17=PB14
 RCC.HSI_VALUE=8000000
-Mcu.Pin18=PB14
+Mcu.Pin18=PB15
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-Mcu.Pin11=PA2
-Mcu.Pin12=PA3
-Mcu.Pin10=PA1
+Mcu.Pin11=PA3
+Mcu.Pin12=PC4
+PD0.GPIOParameters=GPIO_Label
+Mcu.Pin10=PA2
 PE2.Locked=true
 PE3.Signal=GPIO_Output
+PB8.Signal=GPIO_Output
 PE3.GPIO_Label=SEG_B
 SPI2.DataSize=SPI_DATASIZE_8BIT
 Dma.USART1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
@@ -264,4 +308,6 @@ ProjectManager.DeviceId=STM32F303VBTx
 PC1.Signal=GPIO_Output
 PB12.Signal=SPI2_NSS
 ProjectManager.LibraryCopy=1
+PE1.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=SEG_H
+isbadioc=false
