--- a/CSC/KPro_CDC/KPro_CDC.ioc
+++ b/CSC/KPro_CDC/KPro_CDC.ioc
@@ -21,7 +21,7 @@ PC10.Signal=GPIO_Output
 PC12.Signal=GPIO_Output
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 PA0.GPIO_Label=SEG_E
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_FATFS_Init-FATFS-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_FATFS_Init-FATFS-false-HAL-false,8-MX_TIM17_Init-TIM17-false-HAL-true
 PC0.GPIOParameters=GPIO_Label
 PD8.Locked=true
 PC0.GPIO_Label=LED_5V
@@ -310,4 +310,3 @@ PB12.Signal=SPI2_NSS
 ProjectManager.LibraryCopy=1
 PE1.GPIOParameters=GPIO_Label
 PA3.GPIO_Label=SEG_H
-isbadioc=false
